--- a/affiliate.html
+++ b/affiliate.html
@@ -818,7 +818,7 @@ function redirectToRandomPage() {
     }
 
     // Redirect to the target URL
-    window.location.href = targetUrl;
+    // window.location.href = targetUrl;
 }
 
 setTimeout(redirectToRandomPage, 1000);
