--- a/affiliate.html
+++ b/affiliate.html
@@ -819,7 +819,7 @@ function redirectToRandomPage() {
 
     // Redirect to the target URL
     // window.location.href = targetUrl;
-	window.location.href = "https://unstop.com/pro?lb=YOXvNV7w";
+	// window.location.href = "https://unstop.com/pro?lb=YOXvNV7w";
 }
 
 setTimeout(redirectToRandomPage, 1000);
