--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <meta property="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/assets/favicon_RQyg-x_KKgYoiBt8308eO.png" />
     <link
+      rel="preload"
       href="/assets/InterVariable_qDqxtwB6S7W69tcm-FSxu.woff2"
       as="font"
       crossorigin="anonymous"
     />
     <link
+      rel="preload"
       href="/assets/WhatsApp_Image_2025-06-19_at_21.08.24_60e86c7c_mXKs7jXPFYGEMINzeGsaq.jpg"
       as="image"
     />
@@ -299,8 +301,10 @@
     <script
       src="/assets/entries/entry-server-routing.BE7fUGuF.js"
       type="module"
+      async
     ></script>
     <link
+      rel="modulepreload"
       href="/assets/entries/pages_index.B1dRF2l3.js"
       as="script"
       type="text/javascript"
