changes for searchbar

--- a/extensions/themes+/v1.0.3/newtab.html
+++ b/extensions/themes+/v1.0.3/newtab.html
@@ -8,6 +8,10 @@
 		<link rel="shortcut icon" href="icons/icon16.png" type="image/x-icon" />
 	</head>
 	<body>
-		<script src="js/newtab.js"></script>
+	<script type="module" src="js/newtab.js"></script>
+	<!-- Action bar container -->
+	<div id="actionbar">
+		<div id="actioncontent"></div>
+	</div>
 	</body>
 </html>
