features addons + ads script change

--- a/extensions/themes+/v1.0.3/newtab.html
+++ b/extensions/themes+/v1.0.3/newtab.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Themes+ New Tab</title>
-		<link rel="stylesheet" href="css/newtab.css" />
+		<link rel="stylesheet" href="css/base.css" />
+		<link rel="stylesheet" href="css/actionbar.css" />
 		<link rel="shortcut icon" href="icons/icon16.png" type="image/x-icon" />
 	</head>
 	<body>
+		<div id="action-bar">
+			<div id="action-content"></div>
+		</div>
 	<script type="module" src="js/newtab.js"></script>
-	<!-- Action bar container -->
-	<div id="actionbar">
-		<div id="actioncontent"></div>
-	</div>
 	</body>
 </html>
